<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
  xmlns:android="http://schemas.android.com/apk/res/android" 
  android:background="@color/background"
  android:orientation="vertical" 
  android:layout_width="fill_parent" 
  android:layout_height="fill_parent" 
  android:padding="15dip" > 
  <TextView
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/first_time"
    android:textColor="@color/text"
    android:layout_marginBottom="20dip" />

  <TextView
    android:layout_height="wrap_content" 
    android:layout_width="wrap_content"
    android:textColor="@color/text"
    android:text="@string/login" />
  <EditText
    android:id="@+id/login_field" 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" 
    android:layout_marginBottom="10dip"
    android:lines="1" />

  <TextView
    android:layout_height="wrap_content" 
    android:layout_width="wrap_content"
    android:textColor="@color/text"
    android:text="@string/password" />
  <EditText
    android:id="@+id/password_field" 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" 
    android:layout_marginBottom="20dip"
    android:lines="1" />

  <TextView
    android:layout_height="wrap_content" 
    android:layout_width="wrap_content"
    android:textColor="@color/text"
    android:text="@string/campfire" />
  <LinearLayout
    android:orientation="horizontal" 
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content"
    android:layout_marginBottom="20dip">
    <EditText
      android:id="@+id/campfire_field" 
      android:layout_width="170dip"
      android:layout_height="wrap_content" 
      android:lines="1" />
    <TextView
      android:layout_toRightOf="@id/campfire_field"
      android:layout_width="120dip" 
      android:layout_height="wrap_content" 
    android:textColor="@color/text"
      android:text="@string/campfirenow" />
  </LinearLayout>
  <Button 
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/sign_in_now" />
</LinearLayout>

